# bitfox-engine

./: .gitignore  CHANGELOG.md  Makefile  README.md
.github/workflows/: ci.yml  gui-linux.yml  gui-macos.yml  gui-windows.yml  release.yml
docs/: ARCHITECTURE.md  ENGINE.md  PERFORMANCE.md  ROADMAP.md
engine/: Cargo.toml
engine/.cargo/: config.toml
engine/src/: constants.rs  ffi.rs  lib.rs  main.rs  tt.rs  uci.rs
engine/src/board/: fen.rs  make.rs  mod.rs  see.rs  threats.rs  zobrist.rs
engine/src/eval/: mod.rs  nnue.rs  psqt.rs
engine/src/movegen/: magic.rs  mod.rs
engine/src/search/: corrhist.rs  history.rs  iterative.rs  limits.rs  mod.rs  negamax.rs  ordering.rs  pv.rs  quiescence.rs  time.rs
engine/src/tools/: bench.rs  datagen.rs  mod.rs  perft.rs
engine/src/types/: bitboard.rs  castling.rs  chess_move.rs  color.rs  mod.rs  piece.rs  score.rs  square.rs
engine/tests/: eval.rs  nnue.rs  perft.rs  see.rs
gui-qt/: .gitignore  CMakeLists.txt  README.md
gui-qt/include/: bitfox_core.h
gui-qt/resources/: resources.qrc  style.qss
gui-qt/src/: main.cpp
gui-qt/src/audio/: SoundBank.cpp  SoundBank.h
gui-qt/src/board/: BoardView.cpp  BoardView.h  CapturedView.cpp  CapturedView.h
gui-qt/src/core/: CoreBoard.cpp  CoreBoard.h
gui-qt/src/engine/: EngineCatalog.cpp  EngineCatalog.h  UciEngine.cpp  UciEngine.h
gui-qt/src/game/: GameController.cpp  GameController.h
gui-qt/src/ui/: Icons.cpp  Icons.h  MainWindow.cpp  MainWindow.h  SidePanel.cpp  SidePanel.h
tools/: package-linux-gui.sh  package-macos-gui.sh  release-smoke.sh  selfplay.py
trainer/: Cargo.toml  DATAFORMAT.md  README.md  experiment.py
trainer/convert/: Cargo.toml
trainer/convert/src/: main.rs
trainer/src/: train.rs
