[package]
name = "bitfox"
version = "1.1.1"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-or-later"

[[bin]]
name = "bitfox"
path = "src/main.rs"

[lib]
name = "bitfox"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 1
